--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,8 @@ ul {
     font-size: 16px;
     line-height: 19px;
     text-align: center;
+    margin-top: 30px;
+    margin-bottom: 10px;
 
     letter-spacing: 0.03em;
     color: #212121;
@@ -141,6 +143,8 @@ ul {
     font-size: 16px;
     line-height: 19px;
     text-align: center;
+    margin: 0px;
+    margin-bottom: 16px;
 
     letter-spacing: 0.03em;
     color: #757575;
@@ -163,7 +167,7 @@ ul {
 }
 /*Расстановка*/
 .section {
-    width: 1170px;
+    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
@@ -222,6 +226,10 @@ ul {
 .auth-nav .item:last-child {
     margin-right: 0px;
 }
+.icon {
+    background-color: #F5F4FA;
+    padding: 25px 100px;
+}
 .icon-style {
     display: flex;
     flex-wrap: wrap;
@@ -240,19 +248,25 @@ ul {
 }
 .list-soc .item {
     margin-right: 10px;
+    margin-bottom: 24px;
 }
 .list-soc .item:last-child {
-    margin-right: 0px;
+    margin-right: 32px;
+}
+.list-soc .item:first-child {
+    margin-left: 32px;
 }
 
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 94px;
 }
 .portfolio-list .item {
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
+    border: 1px solid #EEEEEE;
 }
 .portfolio-list .item:nth-child(3n){
     margin-right: 0px;
@@ -267,6 +281,7 @@ ul {
 .button-list .item {
     margin-right: 8px;
     margin-bottom: 50px;
+    margin-top: 93px;
 }
 .button-list .item:last-child {
     margin-right: 0px;
@@ -289,16 +304,26 @@ ul {
     padding: 0px;
     margin-top: 50px;
 }
-.comand-style .item {
+.comand-style .item-border {
     width: 270px;
-    margin-right: 30px;
+    margin-right: 10px;
+    background: #FFFFFF;
+/* material shadow v1 */
+
+box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+border-radius: 0px 0px 4px 4px;
 }
-.comand-style .item:last-child {
+.comand-style .item-border:last-child {
     margin-right: 0px;
 }
+
+.section-comand {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 .section > .section-comand {
-    margin-top: 188px;
-    margin-bottom: 188px;
+    margin-top: 94px;
+    margin-bottom: 94px;
 }
 .section > .icon-style {
     margin-top: 94px;
@@ -345,10 +370,13 @@ footer .section {
 }
 .footer-soc {
     margin-top: 72px;
+    margin-bottom: 100px;
 }
 .footer-soc .list-soc .item {
     margin-right: 10px;
     margin-top: 20px;
+    margin-left: 0px;
+    margin-bottom: 0px;
 }
 .footer-soc .list-soc .item:last-child {
     margin-right: 0px;
@@ -361,5 +389,9 @@ footer .section {
 .footer-link .subtitle-text {
     margin-bottom: 20px;
     color: #FFFFFF;
+}
+.hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
