--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,12 @@
     --text-subtitle-color:#212121;
     --background-butten-color: #2196F3;
     --background-footer: #2F303A;
-    --main-text:#757575;
+    --icon-text:#757575;
 }
 body {
     font-family: Roboto;
     margin: 0px;
     overflow: none;
-}
-h1, h2, h3
-{
-    margin-top: 0px;
-    margin-bottom: 0px;
 }
 footer {
     background-color: var(--background-footer);
@@ -25,26 +20,27 @@ ul {
     margin-bottom: 0px;
     list-style: none;
 }
-
-.efect-title {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 60px;
-
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    background-color: black;
-    color: #ffffff;
+h1, h2, h3 {
+    margin: 0px;
 }
-/*ЛОГОТИП*/
-.web-logo{
-    font-family: Raleway;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 31px;
-    letter-spacing: 0.03em;
-    margin-right: 85px;
+.link a {
+    text-decoration: none;
+}
+.container-portfolio {
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 95px;
+    padding-top: 50px;
+}
+.container {
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .section-title{
     font-weight: 700;
@@ -54,7 +50,16 @@ ul {
     letter-spacing: 0.03em;
     color: #212121;
 }
-/*telephone, imail*/
+.subtitle-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    margin-bottom: 10px;
+
+    color: var(--text-subtitle-color);
+}
+/* Contact */
 .contact{
     font-style: normal;
     color: var(--text-contact-color);
@@ -63,16 +68,54 @@ ul {
 .contact:focus{
     color: var(--text-header-hover-color);
 }
+/* logo */
+.web-logo{
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    margin-right: 85px;
+}
+
+/* Шапка */
+.main-nav {
+    display: flex;
+    align-items: center;
+}
+.main-nav .list-line {
+    padding-left: 0px;
+}
+.auth-nav {
+    display: flex;
+    margin-left: auto;
+}
+.auth-nav .item {
+    margin-right: 30px;
+}
+.main-nav .list-line {
+    padding-left: 0px;
+}
+.auth-nav .item:last-child {
+    margin-right: 0px;
+}
+.list-line {
+    display: flex;
+}
+.list-line .item {
+    margin-right: 50px;
+    margin-bottom: 32px;
+    margin-top: 32px;
+}
+.list-line .item:last-child {
+    margin-right: 0px;
+}
 .header-text:hover,
 .header-text:focus {
     color: var(--text-header-hover-color);
 }
 .header-text.current {
     color: #2196F3;
-}
-
-.link a {
-    text-decoration: none;
 }
 .header-text {
     font-family: Roboto;
@@ -83,7 +126,27 @@ ul {
 
     color: var(--text-subtitle-color);
 }
+/* hero */
+.hero {
+    background: #F5F4FA;
 
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+.efect-title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+.button-centered {
+    text-align: center;
+    margin-top: 30px;
+}
 .button-hero {
     font-weight: 700;
     font-size: 16px;
@@ -94,30 +157,27 @@ ul {
     background-color: var(--background-butten-color);
     color: #ffffff;
 }
-.button {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 30px;
-    padding: 10px;
-    padding-left: 29px;
-    padding-right: 62px;
-
-    background-color: var(--background-butten-color);
-    color: #ffffff;
+/* Иконки */
+.icon {
+    background-color: #F5F4FA;
+    padding: 25px 100px;
 }
-.button-centered {
-    text-align: center;
+.icon-style {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0px;
+}
+.icon-style .item {
+    width: 270px;
+    margin-right: 30px;
+}
+.icon-style .item:last-child {
+    margin-right: 0px;
+}
+.icon-style .subtitle-text {
     margin-top: 30px;
 }
-.subtitle-text {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-
-    color: var(--text-subtitle-color);
-}
-.main-text{
+.icon-text{
     margin-top: 0px;
     margin-bottom: 0px;
     font-weight: 400;
@@ -125,7 +185,49 @@ ul {
     line-height: 24px;
     letter-spacing: 0.03em;
 
-    color: var(--main-text);
+    color: var(--icon-text);
+}
+/* Занятия */
+.list-project {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0px;
+    margin-top: 50px;
+}
+.list-project .item {
+    margin-right: 30px;
+    width: 370px;
+}
+.list-project .item:last-child {
+    margin-right: 0px;
+}
+/* Команда */
+.comand {
+    background: #F5F4FA;
+
+    padding-top: 95px;
+    padding-bottom: 95px;
+}
+.comand-list {
+    width: 1200px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-bottom: auto;
+}
+.comand-list .item-border {
+    width: 270px;
+    margin-right: 30px;
+    background: #FFFFFF;
+/* material shadow v1 */
+
+box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+border-radius: 0px 0px 4px 4px;
+}
+.comand-list .item-border:last-child {
+    margin-right: 0px;
 }
 .contact-subtitle {
     font-weight: 400;
@@ -149,99 +251,6 @@ ul {
     letter-spacing: 0.03em;
     color: #757575;
 }
-.portfolio-subtitle {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 36px;
-    letter-spacing: 0.06em;
-
-    color: #212121;
-}
-.portfolio-text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-    letter-spacing: 0.03em;
-
-    color: #757575;
-}
-/*Расстановка*/
-.section {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.list-line {
-    display: flex;
-}
-/*section, header{
-    background-color: red;
-}*/
-
-.list-сustomer {
-    padding-left: 0px;
-    padding-right: 0px;
-    display: flex;
-    flex-wrap: wrap;
-}
-.list-сustomer .item {
-    margin-right: 30px;
-    margin-bottom: 94px;
-    margin-top: 50px;
-}
-.list-сustomer .item:last-child {
-    margin-right: 0px;
-}
-/*Списки в header и footer*/
-.list-line .item {
-    margin-right: 50px;
-    margin-bottom: 32px;
-    margin-top: 32px;
-}
-.list-line .item:last-child {
-    margin-right: 0px;
-}
-
-.main-nav {
-    display: flex;
-    align-items: center;
-}
-.main-nav .list-line {
-    padding-left: 0px;
-}
-.list {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-.auth-nav {
-    display: flex;
-    margin-left: auto;
-}
-.auth-nav .item {
-    margin-right: 30px;
-}
-.auth-nav .item:last-child {
-    margin-right: 0px;
-}
-.icon {
-    background-color: #F5F4FA;
-    padding: 25px 100px;
-}
-.icon-style {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0px;
-}
-.icon-style .item {
-    width: 270px;
-    margin-right: 30px;
-}
-.icon-style .item:last-child {
-    margin-right: 0px;
-}
 .list-soc {
     display: flex;
     padding-left: 0px;
@@ -256,106 +265,37 @@ ul {
 .list-soc .item:first-child {
     margin-left: 32px;
 }
-
-.portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 94px;
-}
-.portfolio-list .item {
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    border: 1px solid #EEEEEE;
-}
-.portfolio-list .item:nth-child(3n){
-    margin-right: 0px;
-}
-.portfolio-list .item:nth-last-child(-n + 3){
-    margin-bottom: 0px;
-}
-.button-list {
-    display: flex;
+/* Клиенты */
+.list-сustomer {
     padding-left: 0px;
-}
-.button-list .item {
-    margin-right: 8px;
-    margin-bottom: 50px;
-    margin-top: 93px;
-}
-.button-list .item:last-child {
-    margin-right: 0px;
-}
-
-.button-portfolio {
-    background: #F5F4FA;
-    border-radius: 4px;
-    padding: 6px 22px;
-    border: 0px;
-}
-.button-margin {
-    width: 611px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.comand-style {
+    padding-right: 0px;
     display: flex;
     flex-wrap: wrap;
-    padding: 0px;
+}
+.list-сustomer .item {
+    margin-right: 30px;
+    margin-bottom: 94px;
     margin-top: 50px;
 }
-.comand-style .item-border {
-    width: 270px;
-    margin-right: 10px;
-    background: #FFFFFF;
-/* material shadow v1 */
-
-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-border-radius: 0px 0px 4px 4px;
-}
-.comand-style .item-border:last-child {
+.list-сustomer .item:last-child {
     margin-right: 0px;
 }
-
-.section-comand {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-.section > .section-comand {
-    margin-top: 94px;
-    margin-bottom: 94px;
-}
-.section > .icon-style {
-    margin-top: 94px;
-    margin-bottom: 94px;
-}
-.list-project {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0px;
-}
-.list-project .item {
-    margin-right: 30px;
-    width: 370px;
-}
-.list-project .item:last-child {
-    margin-right: 0px;
-}
-footer .section {
+/* Подвал */
+.footer {
     display: flex;
 }
-.section .footer-section {
+.footer-section {
     margin-top: 60px;
     margin-bottom: 60px;
     margin-left: 0px;
-    margin-right: 69px;
+    margin-right: 70px;
 }
 .footer-adress {
     padding-left: 0px;
     margin-top: 20px;
 }
 .footer-adress .item {
-    margin-bottom: 9px;
+    margin-bottom: 10px;
 }
 .footer-adress .item:last-child {
     margin-bottom: 0px;
@@ -369,8 +309,7 @@ footer .section {
     font-style: normal;
 }
 .footer-soc {
-    margin-top: 72px;
-    margin-bottom: 100px;
+    margin-top: 70px;
 }
 .footer-soc .list-soc .item {
     margin-right: 10px;
@@ -383,15 +322,87 @@ footer .section {
 }
 .footer-link {
     margin-top: 72px;
-    margin-left: 94px;
-    margin-bottom: 94px;
+    margin-left: 95px;
+    margin-bottom: 95px;
 }
 .footer-link .subtitle-text {
+    margin-top: 0px;
     margin-bottom: 20px;
     color: #FFFFFF;
 }
-.hero {
-    padding-top: 200px;
-    padding-bottom: 200px;
-}
+.button {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    padding: 10px;
+    padding-left: 29px;
+    padding-right: 62px;
 
+    background-color: var(--background-butten-color);
+    color: #ffffff;
+}
+/* Портфолио */
+/* Кнопки */
+.button-margin {
+    width: 620px;
+    padding-top: 95px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.button-list {
+    display: flex;
+    padding-left: 0px;
+}
+.button-list .item {
+    margin-right: 10px;
+}
+.button-list .item:last-child {
+    margin-right: 0px;
+}
+.button-portfolio {
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    /* identical to box height, or 162% */
+
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    background: #F5F4FA;
+    border-radius: 4px;
+    padding: 6px 22px;
+    border: 0px;
+}
+/* Главный контент */
+.portfolio-list {
+    padding: 0px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.portfolio-list .item {
+    width: 370px;
+    margin-right: 25px;
+    margin-bottom: 30px;
+    border: 1px solid #EEEEEE;
+}
+.portfolio-list .item:nth-child(3n){
+    margin-right: 0px;
+}
+.portfolio-list .item:nth-last-child(-n + 3){
+    margin-bottom: 0px;
+}
+.portfolio-subtitle, .portfolio-text {
+    margin-left: 24px;
+    margin-right: 24px;
+}
+.portfolio-subtitle {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+
+    color: #212121;
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
