--- a/css/style.css
+++ b/css/style.css
@@ -35,13 +35,6 @@ h1, h2, h3 {
     padding-bottom: 95px;
     padding-top: 50px;
 }
-.container {
-    width: 1170px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
 .section-title{
     font-weight: 700;
     font-size: 36px;
@@ -79,6 +72,13 @@ h1, h2, h3 {
 }
 
 /* Шапка */
+.header-container {
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .main-nav {
     display: flex;
     align-items: center;
@@ -158,6 +158,16 @@ h1, h2, h3 {
     color: #ffffff;
 }
 /* Иконки */
+.icon-container {
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+
+    padding-top: 95px;
+    padding-bottom: 95px;
+}
 .icon {
     background-color: #F5F4FA;
     padding: 25px 100px;
@@ -188,6 +198,15 @@ h1, h2, h3 {
     color: var(--icon-text);
 }
 /* Занятия */
+.project-container {
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+
+    padding-bottom: 95px;
+}
 .list-project {
     display: flex;
     flex-wrap: wrap;
@@ -207,6 +226,13 @@ h1, h2, h3 {
 
     padding-top: 95px;
     padding-bottom: 95px;
+}
+.comand-container {
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .comand-list {
     width: 1200px;
@@ -266,6 +292,16 @@ border-radius: 0px 0px 4px 4px;
     margin-left: 32px;
 }
 /* Клиенты */
+.costomer-container{
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+
+    padding-top: 95px;
+    padding-bottom: 95px;
+}
 .list-сustomer {
     padding-left: 0px;
     padding-right: 0px;
@@ -281,8 +317,16 @@ border-radius: 0px 0px 4px 4px;
     margin-right: 0px;
 }
 /* Подвал */
+.footer-container {
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .footer {
     display: flex;
+    justify-content: space-between;
 }
 .footer-section {
     margin-top: 60px;
@@ -373,6 +417,14 @@ border-radius: 0px 0px 4px 4px;
     border-radius: 4px;
     padding: 6px 22px;
     border: 0px;
+}
+.button-portfolio:hover {
+    color: #FFFFFF;
+    background: #2196F3;
+    /* shadow-middle */
+
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 /* Главный контент */
 .portfolio-list {
